# django-run-headless-app

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
tasks/: __init__.py  base.py  boot_django.py  manage_django.py  startapp.py
