[tool.poetry]
name = "django-headless-dev-cli"
version = "0.1.0"
description = "Invoke-based wrapper for django manage.py commands"
authors = ["TJ <yolabingo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
django = "^5"
django-extensions = "^3"
emoji = "^2"
pre-commit = "^3.6.2"
ruff = "^0.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
